name:                euler
version:             0.1.0.0
synopsis:            my solutions to project euler
license:             BSD3
license-file:        LICENSE
author:              Greg Horn
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable euler
  main-is:           Main.hs
  -- other-modules:       
  build-depends:     base, time, containers, vector, hmatrix
  Ghc-options:       -O2
